--- a/src/ProductList.css
+++ b/src/ProductList.css
@@ -315,3 +315,22 @@ body {
         text-align: center; /* Align text to the center */
       }
   }
+
+.cart-icon-container {
+    position: relative;
+    display: inline-block;
+}
+
+.cart-quantity {
+    position: absolute;
+    top: -5px;
+    right: -5px;
+    background-color: #e53e3e;
+    color: white;
+    border-radius: 50%;
+    padding: 4px 8px;
+    font-size: 14px;
+    font-weight: bold;
+    min-width: 20px;
+    text-align: center;
+}
